// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridList renders default 1`] = `
.emotion-0 {
  display: grid;
  grid-gap: 16px;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  list-style: none;
  margin-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

<ul
  className="emotion-0"
  data-cy="gridList"
>
  <li>
    list item
  </li>
  <li>
    list item
  </li>
</ul>
`;

exports[`GridList renders with all props 1`] = `
.emotion-0 {
  display: grid;
  grid-gap: 24px;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  list-style: none;
  margin-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

<ol
  className="emotion-0"
  data-cy="gridList"
>
  <li>
    list item
  </li>
  <li>
    list item
  </li>
</ol>
`;

exports[`GridList renders with responsive props 1`] = `
.emotion-0 {
  display: grid;
  list-style: none;
  margin-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
}

@media (min-width: 0) {
  .emotion-0 {
    grid-gap: 12px;
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    grid-gap: 16px;
  }
}

@media (min-width: 0) {
  .emotion-0 {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (min-width: 900px) {
  .emotion-0 {
    grid-template-columns: repeat(2, 1fr);
  }
}

<ul
  className="emotion-0"
  data-cy="gridList"
>
  <li>
    list item
  </li>
  <li>
    list item
  </li>
</ul>
`;
